--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <title>My Site!</title>
+    <style>
+        h1{
+            color:green;
+            font-family:Arial;
+            font-size:20px;
+        }
+    </style>
 </head>
 <body>
     <h1>This is my GitHub Pages website!</h1>
